k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backstage
  namespace: ns-backstage
  labels:
    app.kubernetes.io/name: backstage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backstage
  ports:
    - name: http
      port: 7007
      targetPort: http
